--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 				<br />
 
 				<div class="text-center">
-					<a href="/tables"
+					<a href="/tables.html"
 						><button type="button" class="btn btn-lg btn-primary">
 							<span class="glyphicon glyphicon-list-alt"></span> View Tables
 						</button></a
 					>
-					<a href="/reserve"
+					<a href="/reserve.html"
 						><button type="button" class="btn btn-lg btn-danger">
 							<span class="glyphicon glyphicon-credit-card"></span> Make
 							Reservation
