--- a/reserve.html
+++ b/reserve.html
@@ -29,7 +29,7 @@
 				<br />
 
 				<div class="text-center">
-					<a href="/tables"
+					<a href="/tables.html"
 						><button type="button" class="btn btn-lg btn-primary">
 							<span class="glyphicon glyphicon-list-alt"></span> View Tables
 						</button></a
