--- a/tables.html
+++ b/tables.html
@@ -29,7 +29,7 @@
 				<br />
 
 				<div class="text-center">
-					<a href="/reserve"
+					<a href="/reserve.html"
 						><button type="button" class="btn btn-lg btn-danger">
 							<span class="glyphicon glyphicon-credit-card"></span> Make
 							Reservation
